feat(stockx): 获取上架任务导出补 variantId 与最低价 + 统一最低价口径
- 获取上架任务(StockXFetchListingsTaskRunner)原本丢弃了 API 已返回的
  variantId 和最低价,现补写入 productId/lowestPrice
- 导出(TaskItemExcel/TaskItemController)新增"商品ID(variantId)"列
- 抽出 ShoesUtil.resolveStockxLowest 统一最低价口径(STANDARD取min,
  CUSTODIAL只取express),消除 StockXService 中 3 处重复逻辑
- 新增 build.sh:本地强制用 JDK21 跑 Maven(默认JDK26与--enable-preview冲突),
  Docker部署走JDK21镜像不受影响

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>